--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,7 +10,7 @@
     "deploy": "fly deploy --remote-only"
   },
   "dependencies": {
-    "@dotenvx/dotenvx": "1.20.1",
+    "@dotenvx/dotenvx": "1.21.0",
     "@libsql/client": "0.8.0",
     "@sentry/node": "8.35.0",
     "@stacks/blockchain-api-client": "8.1.2",
@@ -21,6 +21,7 @@
     "h3": "1.13.0",
     "nitro-cors": "0.7.1",
     "postgres": "3.4.4",
+    "twitter-api-v2": "1.17.1",
     "unstorage": "1.12.0",
     "zod": "3.23.8",
     "zod-validation-error": "3.4.0"
