--- a/apps/server/fly.toml
+++ b/apps/server/fly.toml
@@ -5,6 +5,11 @@ primary_region = 'sjc'
 # Comment next line to deploy the app from source code
 image = "ghcr.io/pradel/stackspulse/server:0.19.0"
 
+[[mounts]]
+source = 'data'
+destination = '/data'
+initial_size = '1gb'
+
 [http_service]
 internal_port = 3000
 force_https = true
