--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.36.0",
-    "@libsql/client": "0.8.0",
     "@sentry/node": "8.54.0",
     "@stacks/blockchain-api-client": "8.6.0",
     "@stacks/stacks-blockchain-api-types": "7.14.1",
     "@stackspulse/protocols": "workspace:*",
     "@t3-oss/env-core": "0.12.0",
+    "better-sqlite3": "11.8.1",
+    "db0": "0.2.4",
     "drizzle-orm": "0.33.0",
     "h3": "1.15.0",
     "nitro-cors": "0.7.1",
@@ -27,6 +28,7 @@
     "zod-validation-error": "3.4.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "7.6.12",
     "nitropack": "2.10.4",
     "prisma": "6.3.1"
   }
