--- a/apps/server-indexer/package.json
+++ b/apps/server-indexer/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@dotenvx/dotenvx": "1.39.0",
     "@prisma/client": "6.5.0",
+    "@stacks/blockchain-api-client": "8.7.0",
+    "@stacks/transactions": "7.0.5",
     "@t3-oss/env-core": "0.12.0",
     "prisma": "6.5.0",
     "zod": "3.24.2"
