--- a/apps/server-indexer/.env.development
+++ b/apps/server-indexer/.env.development
@@ -1,1 +1,2 @@
+NODE_ENV="development"
 DATABASE_URL="postgres://stackspulse_user:stackspulse_password@host.docker.internal:5432/stackspulse_db?sslmode=disable"
