--- a/apps/server-indexer/package.json
+++ b/apps/server-indexer/package.json
@@ -14,10 +14,12 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.39.0",
+    "@hirosystems/chainhook-client": "2.3.0",
     "@prisma/client": "6.5.0",
     "@stacks/blockchain-api-client": "8.7.0",
     "@stacks/transactions": "7.0.5",
     "@t3-oss/env-core": "0.12.0",
+    "consola": "3.4.2",
     "prisma": "6.5.0",
     "zod": "3.24.2"
   },
